IVA 303 oficiales 2024+2025 + facturas 2022-2023 restauradas + IS2024
- MODELOS_303: 2024 Q1-Q4 y 2025 Q1-Q4 datos oficiales AEAT
- Restauradas facturas emitidas/recibidas 2022 (36) y 2023 (19)
- PDFs: 1T24, 2T24, 1T25, 2T25, 3T25, 4T25i, 4T25ii
- 390_IVA_anual_2025 + IS2024 (Modelo 200)
- Docs catalog y ivaDocsMap actualizados

--- a/index.html
+++ b/index.html
@@ -87,6 +87,51 @@ const MODELOS_303 = {
      resultadoRegimen:-81.67,sumaResultados:-81.67,atribuibleEstado:-81.67,
      cuotasPendientes:11316.75,cuotasAplicadas:0,cuotasPendientesPosterior:11316.75,
      entregasIntracom:11316.75,resultadoLiquidacion:-81.67,estado:"A COMPENSAR",importeCompensar:81.67,doc:"docs/fiscal/2023/4T23.pdf"}
+  ],
+  2024: [
+    {trimestre:"1T",periodo:"Q1",fecha:"22-04-2024",justificante:"3035085593434",csv:"SYK2ZQ96RH9STCVY",
+     baseImponible21:0,baseExenta0:0,cuotaDevengada:0,baseIvaSoportado:648.14,cuotaDeducible:124.34,
+     resultadoRegimen:-124.34,sumaResultados:-124.34,atribuibleEstado:-124.34,
+     cuotasPendientes:11398.42,cuotasAplicadas:0,cuotasPendientesPosterior:11398.42,
+     resultadoLiquidacion:-124.34,estado:"A COMPENSAR",importeCompensar:124.34,doc:"docs/fiscal/2024/1T24.pdf"},
+    {trimestre:"2T",periodo:"Q2",fecha:"17-07-2024",justificante:"3035036951870",csv:"LWP94KHTYARCX3P3",expediente:"202430303860607W",
+     baseImponible21:3000.00,baseExenta0:225.00,cuotaDevengada:630.00,baseIvaSoportado:8425.51,cuotaDeducible:1651.51,
+     resultadoRegimen:-1021.51,sumaResultados:-1021.51,atribuibleEstado:-1021.51,
+     cuotasPendientes:11398.00,cuotasAplicadas:0,cuotasPendientesPosterior:11398.00,
+     resultadoLiquidacion:-1021.51,estado:"A COMPENSAR",importeCompensar:1021.51,doc:"docs/fiscal/2024/2T24.pdf"},
+    {trimestre:"3T",periodo:"Q3",fecha:"17-10-2024",justificante:"3035048379176",csv:"92T7NFET7TFB6KYH",
+     baseImponible21:0,baseExenta0:0,cuotaDevengada:0,baseIvaSoportado:806.00,cuotaDeducible:172.24,
+     resultadoRegimen:-172.24,sumaResultados:-172.24,atribuibleEstado:-172.24,
+     cuotasPendientes:1492.69,cuotasAplicadas:0,cuotasPendientesPosterior:1492.69,
+     resultadoLiquidacion:-172.24,estado:"A COMPENSAR",importeCompensar:172.24,doc:"docs/fiscal/2024/IVA_Q3_2024.pdf"},
+    {trimestre:"4T",periodo:"Q4",fecha:"20-01-2025",justificante:"3035038897834",csv:"8F2WX5N3FQPPBBCW",
+     baseImponible21:6300.00,baseExenta0:300.00,cuotaDevengada:1323.00,baseIvaSoportado:6078.66,cuotaDeducible:1224.85,
+     resultadoRegimen:98.15,sumaResultados:98.15,atribuibleEstado:98.15,
+     cuotasPendientes:11695.00,cuotasAplicadas:98.15,cuotasPendientesPosterior:11596.85,
+     resultadoLiquidacion:0.00,estado:"RESULTADO 0",doc:"docs/fiscal/2024/IVA_Q4_2024.pdf"}
+  ],
+  2025: [
+    {trimestre:"1T",periodo:"Q1",fecha:"19-04-2025",justificante:"3036004851950",csv:"B7URUHC78EP5489R",expediente:"202530303860304Z",
+     baseImponible21:0,baseExenta0:825.00,cuotaDevengada:0,baseIvaSoportado:636.67,cuotaDeducible:133.70,
+     resultadoRegimen:-133.70,sumaResultados:-133.70,atribuibleEstado:-133.70,
+     cuotasPendientes:1566.78,cuotasAplicadas:0,cuotasPendientesPosterior:1566.78,
+     resultadoLiquidacion:-133.70,estado:"A COMPENSAR",importeCompensar:133.70,doc:"docs/fiscal/2025/1T25.pdf"},
+    {trimestre:"2T",periodo:"Q2",fecha:"18-07-2025",justificante:"3036015277400",csv:"DCQQM9JAMZXH7BRB",expediente:"202530303860648P",
+     baseImponible21:0,baseExenta0:825.00,cuotaDevengada:0,baseIvaSoportado:1338.37,cuotaDeducible:171.48,
+     resultadoRegimen:-171.48,sumaResultados:-171.48,atribuibleEstado:-171.48,
+     cuotasPendientes:1700.48,cuotasAplicadas:0,cuotasPendientesPosterior:1700.48,
+     resultadoLiquidacion:-171.48,estado:"A COMPENSAR",importeCompensar:171.48,doc:"docs/fiscal/2025/2T25.pdf"},
+    {trimestre:"3T",periodo:"Q3",fecha:"18-10-2025",justificante:"3036084416391",csv:"XE9AHFUVK557C2B5",expediente:"202530303860982J",
+     baseImponible21:3000.00,baseExenta0:0,cuotaDevengada:630.00,baseIvaSoportado:636.67,cuotaDeducible:133.70,
+     resultadoRegimen:496.30,sumaResultados:496.30,atribuibleEstado:496.30,
+     cuotasPendientes:1871.96,cuotasAplicadas:496.30,cuotasPendientesPosterior:1375.66,
+     resultadoLiquidacion:0.00,estado:"RESULTADO 0",doc:"docs/fiscal/2025/3T25.pdf"},
+    {trimestre:"4T",periodo:"Q4",fecha:"28-01-2026",justificante:"3036006574544",csv:"ZTAA3Q75PRDTCGYC",expediente:"202530303861354G",
+     rectificativa:true,justificanteAnterior:"3036035671855",
+     baseImponible21:6300.00,baseExenta0:1375.00,cuotaDevengada:1323.00,baseIvaSoportado:10775.06,cuotaDeducible:2245.13,
+     resultadoRegimen:-922.13,sumaResultados:-922.13,atribuibleEstado:-922.13,
+     cuotasPendientes:1375.66,cuotasAplicadas:0,cuotasPendientesPosterior:1375.66,
+     resultadoLiquidacion:-922.13,estado:"A COMPENSAR",importeCompensar:922.13,doc:"docs/fiscal/2025/4T25ii.pdf"}
   ]
 };
 
@@ -630,12 +675,15 @@ function App() {
 
     const ivaDocsMap = {
       2024: {
-        Q2: [{label:"Borrador IVA 2T",doc:"docs/fiscal/2024/IVA_2T2024.xlsx"}],
+        Q1: [{label:"Modelo 303 — 1T",doc:"docs/fiscal/2024/1T24.pdf"}],
+        Q2: [{label:"Modelo 303 — 2T",doc:"docs/fiscal/2024/2T24.pdf"},{label:"Borrador IVA 2T",doc:"docs/fiscal/2024/IVA_2T2024.xlsx"}],
         Q3: [{label:"Modelo 303 — 3T",doc:"docs/fiscal/2024/IVA_Q3_2024.pdf"}],
         Q4: [{label:"Modelo 303 — 4T",doc:"docs/fiscal/2024/IVA_Q4_2024.pdf"}],
         anual: [{label:"Modelo 390 — Resumen anual",doc:"docs/fiscal/2024/IVA_resumen_anual_2024.pdf"}],
       },
-      2025: {},
+      2025: {
+        anual: [{label:"Modelo 390 — Resumen anual",doc:"docs/fiscal/2025/390_IVA_anual_2025.pdf"}],
+      },
       2023: {},
     };
     const ivaDocs = ivaDocsMap[year]||{};
@@ -732,6 +780,9 @@ function App() {
           </tr></tfoot>
         </table>
         </div>
+        {(ivaDocs.anual||[]).length>0&&<div style={{padding:"10px 18px",borderTop:"1px solid #E4E9F0",display:"flex",gap:8,flexWrap:"wrap"}}>
+          {ivaDocs.anual.map((d,j)=><DocLink key={j} d={d}/>)}
+        </div>}
       </div>}
 
       {/* ─── GRÁFICO IVA DEVENGADO vs DEDUCIBLE ─── */}
@@ -803,6 +854,7 @@ function App() {
 
     const isDocsMap = {
       2024: [
+        {label:"Modelo 200 — IS 2024",doc:"docs/fiscal/2024/IS2024.pdf"},
         {label:"Justificante pago a cuenta IS",doc:"docs/fiscal/2024/Justificante_pago_a_cuenta_IS_22024.pdf"},
         {label:"Liquidación pago a cuenta IS",doc:"docs/fiscal/2024/Liquidacio_n_Pago_a_cuenta_IS_2024.pdf"},
         {label:"Pago Mod.010 — 248,22€",doc:"docs/fiscal/2025/082615305105DC5LNA45CZ.pdf"},
@@ -1019,9 +1071,17 @@ function App() {
         {label:"Descripción",key:"desc"},
         {label:"Periodo",key:"periodo",nowrap:true},
       ]} data={[
-        {id:"d1",tipo:"IVA 303",archivo:"IVA_Q3_2024.pdf",desc:"Modelo 303 3T 2024",periodo:"Q3 2024",doc:"docs/fiscal/2024/IVA_Q3_2024.pdf"},
-        {id:"d2",tipo:"IVA 303",archivo:"IVA_Q4_2024.pdf",desc:"Modelo 303 4T 2024",periodo:"Q4 2024",doc:"docs/fiscal/2024/IVA_Q4_2024.pdf"},
+        {id:"d0a",tipo:"IVA 303",archivo:"1T24.pdf",desc:"Modelo 303 1T 2024 — A compensar",periodo:"Q1 2024",doc:"docs/fiscal/2024/1T24.pdf"},
+        {id:"d0b",tipo:"IVA 303",archivo:"2T24.pdf",desc:"Modelo 303 2T 2024 — A compensar",periodo:"Q2 2024",doc:"docs/fiscal/2024/2T24.pdf"},
+        {id:"d1",tipo:"IVA 303",archivo:"IVA_Q3_2024.pdf",desc:"Modelo 303 3T 2024 — A compensar",periodo:"Q3 2024",doc:"docs/fiscal/2024/IVA_Q3_2024.pdf"},
+        {id:"d2",tipo:"IVA 303",archivo:"IVA_Q4_2024.pdf",desc:"Modelo 303 4T 2024 — Resultado 0",periodo:"Q4 2024",doc:"docs/fiscal/2024/IVA_Q4_2024.pdf"},
         {id:"d3",tipo:"IVA 390",archivo:"IVA_resumen_anual_2024.pdf",desc:"Resumen anual IVA",periodo:"2024",doc:"docs/fiscal/2024/IVA_resumen_anual_2024.pdf"},
+        {id:"d3b",tipo:"IVA 303",archivo:"1T25.pdf",desc:"Modelo 303 1T 2025 — A compensar",periodo:"Q1 2025",doc:"docs/fiscal/2025/1T25.pdf"},
+        {id:"d3c",tipo:"IVA 303",archivo:"2T25.pdf",desc:"Modelo 303 2T 2025 — A compensar",periodo:"Q2 2025",doc:"docs/fiscal/2025/2T25.pdf"},
+        {id:"d3d",tipo:"IVA 303",archivo:"3T25.pdf",desc:"Modelo 303 3T 2025 — Resultado 0",periodo:"Q3 2025",doc:"docs/fiscal/2025/3T25.pdf"},
+        {id:"d3e",tipo:"IVA 303",archivo:"4T25ii.pdf",desc:"Modelo 303 4T 2025 — A compensar (rectificativa)",periodo:"Q4 2025",doc:"docs/fiscal/2025/4T25ii.pdf"},
+        {id:"d3f",tipo:"IVA 303",archivo:"4T25i.pdf",desc:"Modelo 303 4T 2025 — Original sustituida",periodo:"Q4 2025",doc:"docs/fiscal/2025/4T25i.pdf"},
+        {id:"d3g",tipo:"IVA 390",archivo:"390_IVA_anual_2025.pdf",desc:"Resumen anual IVA",periodo:"2025",doc:"docs/fiscal/2025/390_IVA_anual_2025.pdf"},
         {id:"d4",tipo:"IVA",archivo:"IVA_2T2024.xlsx",desc:"Borrador IVA 2T",periodo:"Q2 2024",doc:"docs/fiscal/2024/IVA_2T2024.xlsx"},
         {id:"d4b",tipo:"IVA 303",archivo:"1T23.pdf",desc:"Modelo 303 1T 2023 — A compensar",periodo:"Q1 2023",doc:"docs/fiscal/2023/1T23.pdf"},
         {id:"d4c",tipo:"IVA 303",archivo:"2T23.pdf",desc:"Modelo 303 2T 2023 — Resultado 0",periodo:"Q2 2023",doc:"docs/fiscal/2023/2T23.pdf"},
@@ -1033,6 +1093,7 @@ function App() {
         {id:"d4i",tipo:"IVA 303",archivo:"4T22.pdf",desc:"Modelo 303 4T 2022 — A compensar",periodo:"Q4 2022",doc:"docs/fiscal/2022/4T22.pdf"},
         {id:"d5",tipo:"IS",archivo:"Justificante_pago_a_cuenta.pdf",desc:"Pago a cuenta IS",periodo:"2024",doc:"docs/fiscal/2024/Justificante_pago_a_cuenta_IS_22024.pdf"},
         {id:"d6",tipo:"IS",archivo:"Liquidacion_pago_cuenta.pdf",desc:"Liquidación IS",periodo:"2024",doc:"docs/fiscal/2024/Liquidacio_n_Pago_a_cuenta_IS_2024.pdf"},
+        {id:"d6b",tipo:"IS 200",archivo:"IS2024.pdf",desc:"Modelo 200 — Impuesto Sociedades 2024",periodo:"2024",doc:"docs/fiscal/2024/IS2024.pdf"},
         {id:"d7",tipo:"AEAT",archivo:"Mod.010 — 248,22€",desc:"Pago Mod.010",periodo:"Ene 2026",doc:"docs/fiscal/2025/082615305105DC5LNA45CZ.pdf"},
         {id:"d8",tipo:"AEAT",archivo:"Requerimiento_2025.pdf",desc:"Requerimiento AEAT",periodo:"2025",doc:"docs/fiscal/2025/Requerimiento_2025.pdf"},
         {id:"d9",tipo:"AEAT",archivo:"Recibo contestación",desc:"Contestación requerimiento",periodo:"2025",doc:"docs/fiscal/2025/Eecibo_contestacio_n_requerimiento.pdf"},
